--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,15 @@
     }
   },
   "RabbitMQHost": "localhost",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "Command": {
+    "url": "http://localhost:5003",
+    "serviceName": "Command",
+    "serviceId": "command"
+  },
+  "Consul": {
+    "url": "http://localhost:8500"
+  }
 }
+
+
