Updated consul configuration for K8S and helm cmd

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Command": {
+    "url": "http://commands-clusterip-srv:80",
+    "serviceName": "Command",
+    "serviceId": "command"
+  },
+  "Consul": {
+    "url": "http://consul-server.consul:8500"
+  }
 }
