--- a/K8S/consul-depl.yaml
+++ b/K8S/consul-depl.yaml
@@ -1,58 +1,1 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: consul
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: consul
-  template:
-    metadata:
-      labels:
-        app: consul
-    spec:
-      containers:
-        - name: consul
-          image: consul:1.12
-          command:
-            - "consul"
-            - "agent"
-            - "-server"
-            - "-ui"
-            - "-node=server-1"
-            - "-bootstrap-expect=1"
-            - "-client=0.0.0.0"
-          ports:
-            - name: http
-              containerPort: 8500
-              protocol: TCP
-            - name: server
-              containerPort: 8300
-              protocol: TCP
-            - name: rpc
-              containerPort: 8400
-              protocol: TCP
-            - name: serflan
-              containerPort: 8301
-              protocol: TCP
-            - name: serfwan
-              containerPort: 8305
-              protocol: TCP
-          securityContext:
-            runAsUser: 1000
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: consul
-spec:
-  selector:
-    app: consul
-  ports:
-    - name: server
-      port: 8500
-      targetPort: 8500
-      nodePort: 30001
-  type: NodePort
+#helm install consul hashicorp/consul --set global.name=consul --create-namespace --namespace consul
